[gd_scene load_steps=2 format=3 uid="uid://dauth_scene"]

[ext_resource type="Script" path="res://scenes/authentication.gd" id="1_auth"]

[node name="Authentication" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_auth")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133, 0.133, 0.133, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 28
text = "< Back"

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Authentication"
horizontal_alignment = 1

[node name="HSeparator1" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SignInAnonymous" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 56)
theme_override_font_sizes/font_size = 26
text = "Sign In Anonymously"

[node name="SignInGoogle" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 56)
theme_override_font_sizes/font_size = 26
text = "Sign In With Google"

[node name="LinkGoogle" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 56)
theme_override_font_sizes/font_size = 26
text = "Link With Google"

[node name="SignInApple" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 56)
theme_override_font_sizes/font_size = 26
text = "Sign In With Apple"

[node name="LinkApple" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 56)
theme_override_font_sizes/font_size = 26
text = "Link With Apple"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GetUser" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 24
text = "Get Current User"

[node name="GetUID" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 24
text = "Get UID"

[node name="IsSignedIn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 24
text = "Is Signed In"

[node name="IsAnonymous" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 24
text = "Is Anonymous"

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SignOut" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 24
text = "Sign Out"

[node name="DeleteUser" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 24
text = "Delete User"

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ClearOutput" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
theme_override_font_sizes/font_size = 22
text = "Clear Output"

[node name="OutputPanel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 20
text = ""
scroll_following = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SignInAnonymous" to="." method="_on_sign_in_anonymous_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SignInGoogle" to="." method="_on_sign_in_google_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LinkGoogle" to="." method="_on_link_google_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SignInApple" to="." method="_on_sign_in_apple_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LinkApple" to="." method="_on_link_apple_pressed"]

[connection signal="pressed" from="MarginContainer/VBoxContainer/GetUser" to="." method="_on_get_user_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GetUID" to="." method="_on_get_uid_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/IsSignedIn" to="." method="_on_is_signed_in_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/IsAnonymous" to="." method="_on_is_anonymous_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SignOut" to="." method="_on_sign_out_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/DeleteUser" to="." method="_on_delete_user_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ClearOutput" to="." method="_on_clear_output_pressed"]
